# Editra Plugin: CodeBrowser
# Author: Cody Precord
# License: wxWindows

#-----------------------------------------------------------------------------#

Version 0.1
Released: xx/xx/2008

- Initial Release
  + Support for generating browsing trees for elements of the following languages
    - Ada (Procedure Definitions)
    - Cascading Style Sheets (Global Classes, Global Identities)
    - Configuration Files (ini) (sections, keys)
    - Dos Batch Scripts (Labels)
    - Editra Style Sheets (Style Tags Definitions)
    - Fortran (Programs, Subroutines, Functions)
    - Lisp (Function Definitions)
    - Lua (Function Definitions)
    - Nullsoft Installer Scripts (Defines, Functions, Sections)
    - Perl (Packages, Subroutine Declarations, Subroutine Definitions)
    - Python (Classes, Class/Global Variables, Function Definitions)
    - Shell Scripts (Function Definitions)
    - Tcl/Tk (Procedure Definitions)
  + Instant navigation to an items definition by double clicking on it
  + Tree organized by type and scope of object