@@ -44,6 +44,7 @@ LOAD_MAP = { synglob.ID_LANG_ADA : TAGLIB + 'adatags',
              synglob.ID_LANG_LUA : TAGLIB + 'luatags',
              synglob.ID_LANG_NSIS : TAGLIB + 'nsistags',
              synglob.ID_LANG_PERL : TAGLIB + 'perltags',
+             synglob.ID_LANG_PHP : TAGLIB + 'phptags',
              synglob.ID_LANG_PROPS : TAGLIB + 'conftags',
              synglob.ID_LANG_PYTHON : TAGLIB + 'pytags',
              synglob.ID_LANG_TCL : TAGLIB + 'tcltags' }
